# DigitalnaElektronika

./: CMakeLists.txt  LICENSE  ListoOfFilesToTest.txt  README.md  TestFile.txt
.github/workflows/: pull_request.yml
anjadj1193_20/: CMakeLists.txt
anjadj1193_20/vjezba3/: CMakeLists.txt  d_ff.vhdl  jk_ff.vhdl  rs_ff.vhdl  t_ff.vhdl  tb_d_ff.vhdl  tb_jk_ff.vhdl  tb_rs_ff.vhdl  tb_t_ff.vhdl
anjadj1193_20/vjezba4/: Lab04.txt
anjadj1193_20/vjezba5/: Linkovi.txt
anjadj1193_20/vjezba6/: CMakeLists.txt  dekadni_brojac.vhdl  pom_reg_6.vhdl  stac_reg_10.vhdl  tb_dekadni_brojac.vhdl  tb_pom_reg_6.vhdl  tb_stac_reg_10.vhdl
anjadj1193_20/vjezba7/: AD_konvertor_copy.pdsprj
anjadj1193_20/vjezba8/: CMakeLists.txt  ram.vhdl  tb_ram.vhdl
damjanp/: CMakeLists.txt  new_file.txt
damjanp/half_adder/: CMakeLists.txt  half_adder.vhdl  half_adder_tb.vhdl  half_adder_testbench.vcd
daniloc1129_18/: CMakeLists.txt
daniloc1129_18/vjezba3/: CMakeLists.txt  D_FlipFlop.vhdl  D_FlipFlop_TB.vhdl  JK_FlipFlop.vhdl  JK_FlipFlop_TB.vhdl  RS_FlipFlop.vhdl  RS_FlipFlop_TB.vhdl  T_FlipFlop.vhdl  T_FlipFlop_TB.vhdl
daniloc1129_18/vjezba6/: CMakeLists.txt  Decimal_Counter.vhdl  Decimal_Counter_TB.vhdl  Register10bit.vhdl  Register10bit_TB.vhdl  Shift_Register.vhdl  Shift_Register_TB.vhdl
daniloc1129_18/vjezba8/: CMakeLists.txt  RAM_One_Port.vhdl  RAM_One_Port_TB.vhdl
ili_logicko_kolo/: or_gate.vhdl  or_gate_tb.vhdl  work-obj93.cf
lukav11102_21/: CMakeLists.txt
lukav11102_21/vjezba3/: CMakeLists.txt  D_FF.vhdl  D_FF_TB.vhdl  JK_FF.vhdl  JK_FF_TB.vhdl  RS_FF.vhdl  RS_FF_TB.vhdl  T_FF.vhdl  T_FF_TB.vhdl
lukav11102_21/vjezba4/: sevenseg.pdsprj
lukav11102_21/vjezba6/: CMakeLists.txt  bcd_counter.vhdl  bcd_counter_tb.vhdl  shift_register.vhdl  shift_register_tb.vhdl  ten_bit_register.vhdl  ten_bit_register_tb.vhdl
lukav11102_21/vjezba8/: CMakeLists.txt  my_ram_memory.vhdl  my_ram_memory_tb.vhdl  work-obj93.cf
mihajlodj1219_19/: CMakeLists.txt
mihajlodj1219_19/vjezba3/: CMakeLists.txt  D_flipflop.vhdl  D_flipflop_tb.vhdl  JK_flipflop.vhdl  JK_flipflop_tb.vhdl  RS_flipflop.vhdl  RS_flipflop_tb.vhdl  T_flipflop.vhdl  T_flipflop_tb.vhdl
mihajlodj1219_19/vjezba4/: 7sDisplay.pdsprj
mihajlodj1219_19/vjezba5/: Komparatori_aritmeticka_kola.pdsprj
mihajlodj1219_19/vjezba6/: CMakeLists.txt  Dekadni_brojac.vhdl  Dekadni_brojac_tb.vhdl  Pomjeracki_registar.vhdl  Pomjeracki_registar_tb.vhdl  Stac_registar.vhdl  Stac_registar_tb.vhdl
mihajlodj1219_19/vjezba8/: CMakeLists.txt  One_Port_RAM.vhdl  One_Port_RAM_tb.vhdl
milicar_1218_16/: CMakeLists.txt
milicar_1218_16/3/: CMakeLists.txt  d_flipflop.vhdl  d_flipflop_testbench.vhdl  jk_flipflop.vhdl  jk_flipflop_testbench.vhdl  rs_flipflop_testbench.vhdl
milicar_1218_16/3/d_flipflop/: moj_Test_vcd.vcd  work-obj93.cf
milicar_1218_16/3/jk_flipflop/: jk_flipflop_testbench.vhdl  moj_Test_vcd.vcd  work-obj93.cf
milicar_1218_16/3/rs_flipflop/: moj_Test_vcd.vcd  rs_flipflop.vhdl  rs_flipflop_testbench.vhdl  work-obj93.cf
milicar_1218_16/3/t_flipflop/: moj_Test_vcd.vcd  t_flipflop.vhdl  t_flipflop_testbench.vhdl  work-obj93.cf
milicar_1218_16/6/: CMakeLists.txt  DekadniBrojac.vhdl  TestBenchPReg.vhdl  stacionarni_reg.vhdl  tb_DekadniBrojac.vhdl  tb_stacionarni_reg.vhdl
milicar_1218_16/6/Dekadni brojac/: moj_Test_vcd.vcd  work-obj93.cf
milicar_1218_16/6/Pomjeracki registar/: Pomjeracki_Registar.vhdl  moj_Test_vcd.vcd  work-obj93.cf
milicar_1218_16/6/Stacionarni registar/: moj_Test_vcd.vcd  work-obj93.cf
milicar_1218_16/8/: CMakeLists.txt  moj_Test_vcd.vcd  ram.vhdl  ram_testbench.vhdl  work-obj93.cf
neirac1219_20/: CMakeLists.txt
neirac1219_20/vjezba3/: CMakeLists.txt  DFF.vhdl  DFF_TB.vhdl  JKFF.vhdl  JKFF_TB.vhdl  RSFF.vhdl  RSFF_TB.vhdl  TFF.vhdl  TFF_TB.vhdl
neirac1219_20/vjezba6/: CMakeLists.txt  DekadniBrojac.vhdl  DekadniBrojac_tb.vhdl  Pomjeracki_Registar.vhdl  Pomjeracki_Registar_tb.vhdl  Stacionarni_Registar.vhdl  Stacionarni_Registar_tb.vhdl
nikolab1213_20/: CMakeLists.txt
nikolab1213_20/vjezba3/: CMakeLists.txt  D_flip_flop.vcd  D_flip_flop.vhdl  D_flip_flop_tb.vhdl  JK_flip_flop.vcd  JK_flip_flop.vhdl  JK_flip_flop_tb.vhdl  RS_flip_flop.vhdl  RS_flip_flop_tb.vhdl  T_flip_flop.vcd  T_flip_flop.vhdl  T_flip_flop_tb.vhdl  work-obj93.cf
nikolab1213_20/vjezba6/: CMakeLists.txt  dekadni_brojac.vcd  dekadni_brojac.vhdl  dekadni_brojac_tb.vhdl  pomjeracki_registar.vcd  pomjeracki_registar.vhdl  pomjeracki_registar_tb.vhdl  stacionarni_registar.vcd  stacionarni_registar.vhdl  stacionarni_registar_tb.vhdl  work-obj93.cf
nikolab1213_20/vjezba8/: CMakeLists.txt  ram.vcd  ram.vhdl  ram_tb.vhdl  work-obj93.cf
novi_zadatak/: or_gate.vhdl  or_gate_tb.vhdl  work-obj93.cf
rajkoj1204_18/: CMakeLists.txt
rajkoj1204_18/vjezba3/: CMakeCache.txt  CMakeLists.txt  d_flipflop.vhdl.txt  d_flipflop_tb.vhdl.txt  jk_FlipFlop.vhdl.txt  jk_flipflop_tb.vhdl.txt  rs_FlipFlop.vhdl.txt  rs_flipflop_tb.vhdl.txt  t_flipflop.vhdl.txt  t_flipflop_tb.vhdl.txt
rajkoj1204_18/vjezba6/: CMakeLists.txt  dekadniBrojac.vhdl.txt  dekadniBrojac_Tb.vhdl.txt  pomjerackiRegistar.vhdl.txt  pomjerackiRegistar_tb.vhdl.txt  stacionarniRegistar.vhdl.txt  stacionarniRegistar_Tb.vhdl.txt
rajkoj1204_18/vjezba8/: CMakeLists.txt  ram.vhdl.txt  ram_tb.vhdl.txt
ranko11103/: CMakeLists.txt
ranko11103/vjezba6/: CMakeLists.txt  d_brojac.vhdl  d_brojac_tb.vhdl  p_registar.vhdl  p_registar_tb.vhdl  s_registar.vhdl  s_registar_tb.vhdl
ranko11103/vjezba8/: CMakeLists.txt  ram.vhdl  ram_tb.vhdl
stefanb1221_18/: CMakeLists.txt
stefanb1221_18/vjezba3/: CMakeLists.txt  CMakeLists.txt.txt  D_FF.vhdl  D_FF_tb.vhdl  JK_FF.vhdl  JK_FF_tb.vhdl  RS_FF.vhdl  RS_FF_tb.vhdl  T_FF.vhdl  T_FF_tb.vhdl
stefanb1221_18/vjezba6/: 10_bitni_stacionarni_registar.vhdl  10_bitni_stacionarni_registar_tb.vhdl  6_bitni_pomjeracki_registar.vhdl  6_bitni_pomjeracki_registar_tb.vhdl  CMakeLists.txt  dekadni_brojac.vhdl  dekadni_brojac_tb.vhdl
stefanb1221_18/vjezba8/: CMakeLists.txt  one_port_ram.vhdl  one_port_ram_tb.vhdl
zadatak_1/: half_adder.vhdl  half_adder_tb.vhdl
(+56 files in other folders)
