
cmake_minimum_required(VERSION 3.12)

enable_testing()

project(TOP_LEVEL_PROJECT)

add_subdirectory(damjanp)
add_subdirectory(nikolab1213_20)
add_subdirectory(mihajlodj1219_19)
add_subdirectory(lukav11102_21)
add_subdirectory(ranko11103)
add_subdirectory(stefanb1221_18)
add_subdirectory(daniloc1129_18)
add_subdirectory(neirac1219_20)
add_subdirectory(milicar_1218_16)
